--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.16.1",
     "polished": "^4.0.3",
     "react": "^17.0.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
