--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-paginate": "^6.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-spring": "^8.0.27",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-paginate": "^6.2.1",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@types/uuid": "^8.3.0",
